# create-bindu-agent

./: .gitignore  .pre-commit-config.yaml  LICENSE  Makefile  README.bn.md  README.de.md  README.es.md  README.fr.md  README.hi.md  README.ja.md  README.md  README.nl.md  README.ta.md  README.zh-CN.md  cookiecutter.json  mkdocs.yml  pyproject.toml
.devcontainer/: devcontainer.json  postCreateCommand.sh
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md  general_question.md
.github/actions/setup-python-env/: action.yml
.github/workflows/: main.yml  on-release-main.yml
create_bindu_agent/: __init__.py  cli.py
docs/: index.md  prompt_arguments.md  tutorial.md
docs/features/: linting.md  makefile.md
hooks/: post_gen_project.py  pre_gen_project.py
hooks/skills/: hackernews-analysis-skill.yaml  recipe-creator-skill.yaml  startup-analyst-skill.yaml
scripts/installer/: README.md  install.cmd  install.sh
tests/: test_cookiecutter.py  test_generated_project_root.py  utils.py
{{cookiecutter.project_name}}/: .env.example  Dockerfile  Dockerfile.agent  Makefile  README.md  agent_config.json  docker-compose.yml  mkdocs.yml  pyproject.toml
{{cookiecutter.project_name}}/.devcontainer/: devcontainer.json
{{cookiecutter.project_name}}/.github/actions/setup-python-env/: action.yml
{{cookiecutter.project_name}}/.github/workflows/: build-and-push.yml  main.yml  on-release-main.yml
{{cookiecutter.project_name}}/docs/: modules.md
{{cookiecutter.project_name}}/tests/: test_main.py
{{cookiecutter.project_name}}/{{cookiecutter.project_slug}}/: __init__.py  __main__.py  __version__.py  agent_config.json  main.py
{{cookiecutter.project_name}}/{{cookiecutter.project_slug}}/skills/__TEMPLATE__/: skill.yaml
