[project]
name = "{{cookiecutter.project_name}}"
version = "0.0.1"
description = "{{cookiecutter.project_description}}"
authors = [{ name = "{{cookiecutter.author}}", email = "{{cookiecutter.email}}" }]
readme = "README.md"
keywords = ['python']
requires-python = ">=3.12,<3.13"
dependencies = [
    "bindu=={{cookiecutter._bindu_version}}",
    {% if cookiecutter.agent_framework == "agno" -%}
    "agno>=2.2.0",
    {% if cookiecutter.observability_provider == "phoenix" -%}
    "openinference-instrumentation-agno==0.1.19",
    {%- endif %}
    {%- elif cookiecutter.agent_framework == "langchain" -%}
    "langchain>=0.3.0",
    "langchain-openai>=0.2.0",
    {%- elif cookiecutter.agent_framework == "crew" -%}
    "crewai>=0.80.0",
    {%- elif cookiecutter.agent_framework == "fastagent" -%}
    "fastagent>=0.1.0",
    {%- elif cookiecutter.agent_framework == "openai agent" -%}
    "openai>=1.0.0",
    {%- elif cookiecutter.agent_framework == "google adk agent" -%}
    "google-generativeai>=0.8.0",
    {%- endif %}
    "requests>=2.31.0",
    "pyperclip>=1.8.0",
    "rich>=13.0.0",
]
classifiers = [
    "Intended Audience :: Developers",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Libraries :: Python Modules",
]

[project.urls]
Homepage = "https://{{cookiecutter.author_github_handle}}.github.io/{{cookiecutter.project_name}}/"
Repository = "https://github.com/{{cookiecutter.author_github_handle}}/{{cookiecutter.project_name}}"
Documentation = "https://{{cookiecutter.author_github_handle}}.github.io/{{cookiecutter.project_name}}/"

[dependency-groups]
dev = [
    "pytest>=7.2.0",
    "pre-commit>=2.20.0",
    "tox-uv>=1.11.3",
    {% if cookiecutter._type_checker == "ty" %}"ty>=0.0.1a16",{% endif %}
    "pytest-cov>=4.0.0",
    "ruff>=0.11.5",
    "mkdocs>=1.4.2",
    "mkdocs-material>=8.5.10",
    "mkdocstrings[python]>=0.26.1",
    "types-requests>=2.31.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["{{cookiecutter.project_slug}}"]

{% if cookiecutter.type_checker == "ty" -%}
[tool.ty.environment]
python = "./.venv"
python-version = "3.12"
{%- endif %}

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.ruff]
target-version = "py312"
line-length = 120
fix = true

[tool.ruff.lint]
select = [
    # flake8-2020
    "YTT",
    # flake8-bandit
    "S",
    # flake8-bugbear
    "B",
    # flake8-builtins
    "A",
    # flake8-comprehensions
    "C4",
    # flake8-debugger
    "T10",
    # flake8-simplify
    "SIM",
    # isort
    "I",
    # mccabe
    "C90",
    # pycodestyle
    "E", "W",
    # pyflakes
    "F",
    # pygrep-hooks
    "PGH",
    # pyupgrade
    "UP",
    # ruff
    "RUF",
    # tryceratops
    "TRY",
]
ignore = [
    # LineTooLong
    "E501",
    # DoNotAssignLambda
    "E731",
]

[tool.ruff.lint.per-file-ignores]
"tests/*" = ["S101"]

[tool.ruff.format]
preview = true

{% if cookiecutter.codecov == "y" -%}
[tool.coverage.report]
skip_empty = true

[tool.coverage.run]
branch = true
source = ["{{cookiecutter.project_slug}}"]
{% endif %}
